Fixed some bugs in bulk operations not being visible on light/eink screens. Added --bulk-selection-highlight-text-color and --bulk-selection-text-color.

--- a/UI/Web/src/app/cards/bulk-operations/bulk-operations.component.scss
+++ b/UI/Web/src/app/cards/bulk-operations/bulk-operations.component.scss
@@ -1,9 +1,17 @@
 .bulk-select {
     background-color: var(--navbar-bg-color);
     border-bottom: 2px solid var(--primary-color);
-    color: var(--navbar-text-color);
+    color: var(--bulk-selection-text-color) !important;
+
+    .btn-icon {
+        color: var(--bulk-selection-text-color);
+    }
 }
 
 .highlight {
-    color: var(--primary-color) !important;
+    color: var(--bulk-selection-highlight-text-color) !important;
+}
+
+::ng-deep button i.fa {
+    color: var(--bulk-selection-text-color);
 }
