--- a/UI/Web/src/theme/themes/e-ink.scss
+++ b/UI/Web/src/theme/themes/e-ink.scss
@@ -182,4 +182,8 @@
 
   /* Search */
   --search-result-text-lite-color: rgba(0,0,0,1);
+
+  /* Bulk Selection */
+  --bulk-selection-text-color: white;
+  --bulk-selection-highlight-text-color: white;
 }
