--- a/UI/Web/src/theme/themes/light.scss
+++ b/UI/Web/src/theme/themes/light.scss
@@ -196,4 +196,8 @@
 
     /* Search */
     --search-result-text-lite-color: rgba(0,0,0,1);
+
+    /* Bulk Selection */
+  --bulk-selection-text-color: var(--navbar-text-color);
+  --bulk-selection-highlight-text-color: var(--primary-color);
   }
